syntax = "proto3";

option csharp_namespace = "AuthenticationUserInfoService";

service GrpcUserInfo {
	rpc GetUserInfo(GetUserModelRequest) returns (GetUserModelResponse);
}

message GetUserModelRequest {
	string token = 1;
}

message GetUserModelResponse {
	UserModel UserModel = 1;
}

message UserModel {
	string Id = 1;
	string Email = 2;
	string FullName = 3;
}